--- a/requirements.txt
+++ b/requirements.txt
@@ -4,17 +4,13 @@ aiofiles==24.1.0
 
 # HTTP Client
 aiohttp==3.10.11
-httpx==0.27.2
+# httpx не используется, удален для уменьшения размера
 
 # Environment variables
 python-dotenv==1.0.1
 
-# Image processing
-Pillow==11.0.0
-
-# Task queue (optional, for future scaling)
-# celery==5.4.0
-# redis==5.2.0
+# Image processing (только если нужно, Pillow довольно тяжелый)
+# Pillow==11.0.0
 
 # Utilities
 pydantic==2.9.2
